--- a/Project1 - Time Table/TimeTable.html
+++ b/Project1 - Time Table/TimeTable.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     
-    <title>Time table fun</title>
+    <title>Time table</title>
 </head>
 <body>
     <h1 style="text-align: center;">Time Table</h1>
